third_party/move/move-compiler/tests/move_check/inlining/acquires_error_msg.exp
error[E04020]: missing acquires annotation
  ┌─ tests/move_check/inlining/acquires_error_msg.move:7:9
  │
7 │         modify(); // expect error message here
  │         ^^^^^^^^ The call acquires '0x42::test::Test', but the 'acquires' list for the current function 'call_modify_without_acquire` does not contain this type. It must be present in the calling context's acquires list

